# pkg/api/handlers/request.go
@@ -8,14 +8,14 @@ import (
 	"github.com/gorilla/mux"
 )
 
-//	@Summary	get all requests
-//	@Tags		requests
-//	@ID			requests
-//	@Accept		json
-//	@Produce	json
-//	@Success	200	{object}	ClientResponseDto[string]
-//	@Failure	500	{object}	ClientResponseDto[string]
-//	@Router		/api/v1/requests [get]
+// @Summary	get all requests
+// @Tags		requests
+// @ID			requests
+// @Accept		json
+// @Produce	json
+// @Success	200	{object}	ClientResponseDto[string]
+// @Failure	500	{object}	ClientResponseDto[string]
+// @Router		/api/v1/requests [get]
 func (h *Handler) requests(w http.ResponseWriter, r *http.Request) {
 	requests, err := h.services.GetAllRequests(r.Context())
 
@@ -28,14 +28,14 @@ func (h *Handler) requests(w http.ResponseWriter, r *http.Request) {
 	NewSuccessClientResponseDto(r.Context(), w, requests)
 }
 
-//	@Summary	get all requests with responces
-//	@Tags		pairs
-//	@ID			pairs
-//	@Accept		json
-//	@Produce	json
-//	@Success	200	{object}	ClientResponseDto[string]
-//	@Failure	500	{object}	ClientResponseDto[string]
-//	@Router		/api/v1/pairs [get]
+// @Summary	get all requests with responces
+// @Tags		pairs
+// @ID			pairs
+// @Accept		json
+// @Produce	json
+// @Success	200	{object}	ClientResponseDto[string]
+// @Failure	500	{object}	ClientResponseDto[string]
+// @Router		/api/v1/pairs [get]
 func (h *Handler) pairs(w http.ResponseWriter, r *http.Request) {
 	pairs, err := h.services.GetAllPairs(r.Context())
 
@@ -48,15 +48,15 @@ func (h *Handler) pairs(w http.ResponseWriter, r *http.Request) {
 	NewSuccessClientResponseDto(r.Context(), w, pairs)
 }
 
-//	@Summary	get request by id
-//	@Tags		request
-//	@ID			request
-//	@Accept		json
-//	@Produce	json
-//	@Param		id			path		string	true	"request id"
-//	@Success	200			{object}	ClientResponseDto[string]
-//	@Failure	400,404,500	{object}	ClientResponseDto[string]
-//	@Router		/api/v1/request/{id} [get]
+// @Summary	get request by id
+// @Tags		request
+// @ID			request
+// @Accept		json
+// @Produce	json
+// @Param		id			path		string	true	"request id"
+// @Success	200			{object}	ClientResponseDto[string]
+// @Failure	400,404,500	{object}	ClientResponseDto[string]
+// @Router		/api/v1/request/{id} [get]
 func (h *Handler) requestById(w http.ResponseWriter, r *http.Request) {
 	idStr, ok := mux.Vars(r)["id"]
 	if !ok {
@@ -72,22 +72,22 @@ func (h *Handler) requestById(w http.ResponseWriter, r *http.Request) {
 	request, err := h.services.GetRequestById(r.Context(), id)
 
 	if err != nil {
-		NewErrorClientResponseDto(r.Context(), w, http.StatusInternalServerError, "internal server error")
+		NewErrorClientResponseDto(r.Context(), w, http.StatusNotFound, "No request with id")
 		return
 	}
 
 	NewSuccessClientResponseDto(r.Context(), w, request)
 }
 
-//	@Summary	get request with responce by id
-//	@Tags		pair
-//	@ID			pair
-//	@Accept		json
-//	@Produce	json
-//	@Param		id			path		string	true	"request id"
-//	@Success	200			{object}	ClientResponseDto[string]
-//	@Failure	400,404,500	{object}	ClientResponseDto[string]
-//	@Router		/api/v1/pair/{id} [get]
+// @Summary	get request with responce by id
+// @Tags		pair
+// @ID			pair
+// @Accept		json
+// @Produce	json
+// @Param		id			path		string	true	"request id"
+// @Success	200			{object}	ClientResponseDto[string]
+// @Failure	400,404,500	{object}	ClientResponseDto[string]
+// @Router		/api/v1/pair/{id} [get]
 func (h *Handler) pairById(w http.ResponseWriter, r *http.Request) {
 	idStr, ok := mux.Vars(r)["id"]
 	if !ok {
@@ -103,22 +103,22 @@ func (h *Handler) pairById(w http.ResponseWriter, r *http.Request) {
 	pair, err := h.services.GetPairById(r.Context(), id)
 
 	if err != nil {
-		NewErrorClientResponseDto(r.Context(), w, http.StatusInternalServerError, "internal server error")
+		NewErrorClientResponseDto(r.Context(), w, http.StatusNotFound, "No pair with id")
 		return
 	}
 
 	NewSuccessClientResponseDto(r.Context(), w, pair)
 }
 
-//	@Summary	get repeat request by id
-//	@Tags		repeat
-//	@ID			repeat
-//	@Accept		json
-//	@Produce	json
-//	@Param		id			path		string	true	"request id"
-//	@Success	200			{object}	ClientResponseDto[string]
-//	@Failure	400,404,500	{object}	ClientResponseDto[string]
-//	@Router		/api/v1/repeat/{id} [get]
+// @Summary	get repeat request by id
+// @Tags		repeat
+// @ID			repeat
+// @Accept		json
+// @Produce	json
+// @Param		id			path		string	true	"request id"
+// @Success	200			{object}	ClientResponseDto[string]
+// @Failure	400,404,500	{object}	ClientResponseDto[string]
+// @Router		/api/v1/repeat/{id} [get]
 func (h *Handler) repeatById(w http.ResponseWriter, r *http.Request) {
 	idStr, ok := mux.Vars(r)["id"]
 	if !ok {
@@ -134,7 +134,7 @@ func (h *Handler) repeatById(w http.ResponseWriter, r *http.Request) {
 	request, err := h.services.GetRequestById(r.Context(), id)
 
 	if err != nil {
-		NewErrorClientResponseDto(r.Context(), w, http.StatusInternalServerError, "internal server error")
+		NewErrorClientResponseDto(r.Context(), w, http.StatusNotFound, "No request with id")
 		return
 	}
 
@@ -145,4 +145,65 @@ func (h *Handler) repeatById(w http.ResponseWriter, r *http.Request) {
 	}
 
 	NewSuccessClientResponseDto(r.Context(), w, resp)
+}
+
+// @Summary	scan on sql injection
+// @Tags		scan
+// @ID			scan
+// @Accept		json
+// @Produce	json
+// @Param		id			path		string	true	"request id"
+// @Success	200			{object}	ClientResponseDto[string]
+// @Failure	400,404,500	{object}	ClientResponseDto[string]
+// @Router		/api/v1/scan/{id} [get]
+func (h *Handler) scanById(w http.ResponseWriter, r *http.Request) {
+	idStr, ok := mux.Vars(r)["id"]
+	if !ok {
+		NewErrorClientResponseDto(r.Context(), w, http.StatusBadRequest, "invalid params")
+		return
+	}
+	id, err := strconv.Atoi(idStr)
+	if err != nil {
+		NewErrorClientResponseDto(r.Context(), w, http.StatusBadRequest, "invalid params")
+		return
+	}
+
+	request, err := h.services.GetRequestById(r.Context(), id)
+
+	if err != nil {
+		NewErrorClientResponseDto(r.Context(), w, http.StatusNotFound, "No request with id")
+		return
+	}
+
+	resp, err := h.services.ScanRequestOnSqlInjection(r.Context(), request)
+	if err != nil {
+		NewErrorClientResponseDto(r.Context(), w, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	if len(resp) == 0 {
+		NewSuccessClientResponseDto(r.Context(), w, "Уязвимости в запросе не обнаружено")
+		return
+	}
+
+	NewSuccessClientResponseDto(r.Context(), w, resp)
+}
+
+// @Summary	clears base of requests
+// @Tags		clear
+// @ID			clear
+// @Accept		json
+// @Produce	json
+// @Success	200			{object}	ClientResponseDto[string]
+// @Failure	400,404,500	{object}	ClientResponseDto[string]
+// @Router		/api/v1/clear [get]
+func (h *Handler) clear(w http.ResponseWriter, r *http.Request) {
+
+	err := h.services.ClearBase(r.Context())
+	if err != nil {
+		NewErrorClientResponseDto(r.Context(), w, http.StatusInternalServerError, "Error on deleting from base")
+		return
+	}
+
+	NewSuccessClientResponseDto(r.Context(), w, "Sucsesfully cleared")
 }
